# S.O._Talk

./: CMakeLists.txt
include/: Globasle&Funciones.h  hilo1_recibir.h  hilo1_recivir.h  hilo2_enviar.h  socket.h
src/: main.cpp  socket.cpp
